<resources>
    <string name="app_name">对讲机PTT</string>
    <string name="cmd">请输入要计算的命令</string>

    <string name="end">结果</string>

    <string name="Togopen_off">打开对讲机</string>
    <string name="Togopen_on">关闭对讲机</string>

    <string name="Status_OpenSerialFail">打开串口失败</string>
    <string name="Status_OpenDevFileFail">打开设备文件失败</string>
    <string name="Status_ManipulateFail">操作设备失败</string>

    <drawable name="clr_normal">#ffffff</drawable>
    <drawable name="clr_pressed">#a44100</drawable>

    <string name="acceptpart">接收区</string>
    <string name="menu_settings">Settings</string>
    <string name="sentpart">发送区</string>
    <string name="CheckBox1">16进制显示</string>
    <string name="CheckBox2">16进制发送</string>
    <string name="close">退出</string>
    <string name="send">发送</string>
    <string name="set">设置</string>
    <string name="clear">清空显示区</string>
    <string name="port">端口:</string>
    <string name="baudrate">波特率:</string>
    <string name="sure">设置</string>
    <string name="back">返回</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="clear1">清空发送区</string>
    <string name="warning1">打开端口失败，请先进行配置！</string>
    <string name="warning2">打开端口失败，请检查端口是否正确！</string>
    <string name="poweron">上电</string>
    <string name="poweroff">下电</string>
    <string name="path">设置上电路径:</string>
    <string name="stopbit">停止位:</string>
    <string name="crc">校验位:</string>
    <string name="no_crc">奇校验</string>
    <string name="odd_crc">奇校验</string>
    <string name="even_crc">偶校验</string>
    <string name="openserial">打开串口</string>
    <string name="closeserial">关闭串口</string>
    <string name="exittofrist">返回前一页</string>
    <string name="setpbp">设置</string>
    <string name="input_gpio">设置GPIO</string>

    <color name="hotpink">#FF69B4</color>
    <!-- 热粉红色 -->
    <color name="black">#000000</color>
    <!-- 黑色 -->
    <color name="white">#FFFFFF</color>
    <!-- 白色 -->
    <string name="send_hex_hint">请输入十六进制数以类似格式 "0a0b1f3d0a"</string>
    <!-- 白色 -->
    <string name="send_hex_hint_null"></string>
    <string name="bandwidth">带宽：</string>
    <string name="power">功率：</string>
    <string name="squelch_level">静噪等级：</string>
    <string name="receive_subtype">接收亚音类型：</string>
    <string name="emission_subtype">发射亚音类型：</string>
    <string name="receiving_frequency">接收频率：</string>
    <string name="emission_frequency">发射频率：</string>
    <string name="receiving_sub_tone_frequency">接收亚音频率：</string>
    <string name="emission_sub_tone_frequency">发射亚音频率：</string>
    <string name="native_id">本机ID:</string>
    <string name="colour_codes">色码:</string>
    <string name="contact_type">联系人类型:</string>
    <string name="secret_key">密钥:</string>
    <string name="encryption">加密:</string>
    <string name="receive_group_list">接收组列表:</string>
    <string name="encryption_switch">加密开关:</string>
    <string name="contact_number">联系人号码:</string>
    <string name="channel">信道:</string>
    <string name="vol">音量：</string>
    <string name="mic_set">MIC增益</string>
    <string name="acc_service_dec">对讲按键广播</string>



</resources>
