<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    >
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dip"
        android:layout_marginStart="10dip"
        android:layout_weight="2"
        android:text="@string/bandwidth"
         />
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView1" />
    </LinearLayout>
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/textView4"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dip"
        android:layout_marginStart="10dip"
        android:layout_weight="2"
        android:layout_alignParentLeft="true"
        android:gravity="center_vertical"
        android:text="@string/power" />
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/spinner1" />
</LinearLayout>

<!--      几个输入框包括接收发送频率以及接收与发送的亚音频率     -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView_1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dip"
            android:layout_marginStart="10dip"
            android:layout_weight="2"
            android:text="@string/receiving_frequency"
            />
        <EditText
            android:hint="409.7500:409750000"
            android:id="@+id/et_1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView_2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dip"
            android:layout_marginStart="10dip"
            android:layout_weight="2"
            android:text="@string/emission_frequency"
            />
        <EditText
            android:hint="409.7500:409750000"
            android:id="@+id/et_2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView1" />
    </LinearLayout>
    
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/TextView01"
        android:layout_width="fill_parent"
        android:layout_marginLeft="10dip"
        android:layout_marginStart="10dip"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:text="@string/squelch_level" />
    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" />
    </LinearLayout>
    
    <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:orientation="horizontal">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        android:layout_marginLeft="10dip"
        android:layout_marginStart="10dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:text="@string/receive_subtype" />
    	<Spinner
        	android:id="@+id/spinner4"
        	android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:layout_weight="1"
        	android:layout_below="@+id/spinner3"
        	android:layout_alignLeft="@+id/spinner3"
        	android:layout_alignStart="@+id/spinner3"
        	android:layout_alignRight="@+id/spinner3"
        	android:layout_alignEnd="@+id/spinner3"/>
    </LinearLayout>
    
    <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:orientation="horizontal">
    	<TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        android:layout_marginLeft="10dip"
        android:layout_marginStart="10dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:text="@string/emission_subtype" />
		<Spinner
       	 	android:id="@+id/spinner5"
        	android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:layout_weight="1"
        	android:layout_below="@+id/spinner4"
        	android:layout_alignLeft="@+id/spinner3"
        	android:layout_alignStart="@+id/spinner3"
        	android:layout_alignParentRight="true"
        	android:layout_alignParentEnd="true" />
	</LinearLayout>

<!--               发送接收亚音频率的输入框                                  -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView_3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dip"
            android:layout_marginStart="10dip"
            android:layout_weight="2"
            android:text="@string/receiving_sub_tone_frequency"
            />
        <EditText
            android:hint="CTC：0-50 CDC：0-82"
            android:id="@+id/et_3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView_4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dip"
            android:layout_marginStart="10dip"
            android:layout_weight="2"
            android:text="@string/emission_sub_tone_frequency"
            />
        <EditText
            android:hint="CTC：0-50 CDC：0-82"
            android:id="@+id/et_4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView1" />
    </LinearLayout>




    <LinearLayout

        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <Button
            android:id="@+id/check_setting"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:text="检查设置项" />

        <Button
            android:id="@+id/sure_setting"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:text="确认" />
    </LinearLayout>

    <Button
        android:id="@+id/backto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:text="@string/exittofrist" />
  
</LinearLayout>
</RelativeLayout>
