<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <LinearLayout
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dip"
                android:layout_marginStart="10dip"
                android:layout_weight="2"
                android:text="@string/bandwidth"
                />
            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dip"
                android:layout_marginStart="10dip"
                android:layout_weight="2"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:text="@string/power" />
            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_alignLeft="@+id/spinner1"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/spinner1" />
        </LinearLayout>

        <!--      几个输入框包括接收发送频率以及接收与发送的亚音频率     -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView_1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dip"
                android:layout_marginStart="10dip"
                android:layout_weight="2"
                android:text="@string/receiving_frequency"
                />
            <EditText
                android:hint="409.7500:409750000"
                android:id="@+id/et_1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView_2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dip"
                android:layout_marginStart="10dip"
                android:layout_weight="2"
                android:text="@string/emission_frequency"
                />
            <EditText
                android:hint="409.7500:409750000"
                android:id="@+id/et_2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView1" />
        </LinearLayout>

        <!--      数字设置中的本机ID以及色码     -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView_11"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dip"
                android:layout_marginStart="10dip"
                android:layout_weight="2"
                android:text="@string/native_id"
                />
            <EditText
                android:hint="ID：1-16776415"
                android:id="@+id/et_3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView1" />
        </LinearLayout>


        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/TextView01"
                android:layout_width="fill_parent"
                android:layout_marginLeft="10dip"
                android:layout_marginStart="10dip"
                android:layout_height="fill_parent"
                android:layout_weight="2"

                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/colour_codes" />
            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:layout_marginLeft="10dip"
                android:layout_marginStart="10dip"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/contact_type" />
            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_below="@+id/spinner3"
                android:layout_alignLeft="@+id/spinner3"
                android:layout_alignStart="@+id/spinner3"
                android:layout_alignRight="@+id/spinner3"
                android:layout_alignEnd="@+id/spinner3"/>
        </LinearLayout>

        <!--               联系人号码                                  -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView_3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dip"
                android:layout_marginStart="10dip"
                android:layout_weight="2"
                android:text="@string/contact_number"
                />
            <EditText
                android:hint="号码范围:1-16776415"
                android:id="@+id/et_4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView1" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:layout_marginLeft="10dip"
                android:layout_marginStart="10dip"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/encryption_switch" />
            <Spinner
                android:id="@+id/spinner5"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_below="@+id/spinner4"
                android:layout_alignLeft="@+id/spinner3"
                android:layout_alignStart="@+id/spinner3"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </LinearLayout>


        <!--               秘钥                                  -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView_4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dip"
                android:layout_marginStart="10dip"
                android:layout_weight="2"
                android:text="@string/secret_key"
                />
            <EditText
                android:hint="加密关闭则填入0"
                android:id="@+id/et_5"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView1" />
        </LinearLayout>


        <!--               接收组列表                                  -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView_44"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dip"
                android:layout_marginStart="10dip"
                android:layout_weight="2"
                android:text="@string/receive_group_list"
                />
            <EditText
                android:hint="多个用英文逗号 , 隔开:1,2,3"
                android:id="@+id/et_6"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView1" />
        </LinearLayout>

        <!--               MIC增益                                  -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView_mic"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dip"
                android:layout_marginStart="10dip"
                android:layout_weight="2"
                android:text="@string/mic_set"
                />
            <EditText
                android:hint="0-15,默认12"
                android:id="@+id/et_mic"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView1" />
        </LinearLayout>




        <LinearLayout

            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/check_setting"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:text="检查设置项" />

            <Button
                android:id="@+id/sure_setting"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:text="确认" />
        </LinearLayout>

        <Button
            android:id="@+id/backto"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/exittofrist" />

    </LinearLayout>

    </ScrollView>
</RelativeLayout>
